<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="36dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textFontWeight="400"
        android:fontFamily="@font/roboto_regular"
        android:textSize="28sp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/email_title"
        style="@style/TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLogin"
        android:layout_marginTop="28dp"/>

    <EditText
        android:id="@+id/emailField"
        style="@style/BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="16dp"
        android:hint="@string/email_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTitle"
        tools:ignore="TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/emailErrorField"
        style="@style/ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailField"
        android:text="@string/email_error"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/password_title"
        style="@style/TitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailErrorField"
        android:layout_marginTop="28dp"/>

    <EditText
        android:id="@+id/passwordField"
        style="@style/BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:paddingStart="16dp"
        android:hint="@string/password_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTitle"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/passwordErrorField"
        style="@style/ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_error"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button_green"
        android:text="@string/login"
        style="@style/Button"
        android:enabled="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordErrorField"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:id="@+id/registration_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton">

        <TextView
            android:id="@+id/no_account_title"
            style="@style/ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/no_account"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/registration_text"
            style="@style/ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/registration"
            android:textColor="@color/green"
            app:layout_constraintStart_toEndOf="@id/no_account_title" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_text"
        style="@style/ButtonSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_group" />

    <View
        android:id="@+id/view"
        android:layout_width="328dp"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="@color/stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text" />

    <LinearLayout
        android:id="@+id/contacts_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:id="@+id/vk_btn"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:backgroundTint="@color/blue"
            android:background="@drawable/rounded_button">
            <ImageView
                android:src="@drawable/vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/odnoklasniki_btn"
            android:layout_width="156dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@drawable/orange_gradient_rounded"
            android:layout_marginLeft="16dp">
            <ImageView
                android:src="@drawable/odnocl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>