<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:fitsSystemWindows="true"
    tools:context=".presentation.main.home.HomeFragment">

    <LinearLayout
        android:id="@+id/action_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_edit_text"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search_icon"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/search_icon" />

            <EditText
                android:id="@+id/searchField"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="fill_horizontal"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/roboto_regular"
                android:gravity="fill_vertical"
                android:hint="@string/search_placeholder"
                android:letterSpacing="0.025"
                android:lineHeight="18sp"
                android:maxLines="1"
                android:scrollHorizontally="false"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white50"
                android:textFontWeight="400"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/filter_btn"
            android:contentDescription="@string/filter_icon"
            android:padding="16dp"
            android:layout_marginStart="8dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/custom_edit_text"
            android:src="@drawable/filter_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">
        <TextView
            android:id="@+id/filter_choice"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_filter"
            android:textColor="@color/green" />
        <ImageView
            android:src="@drawable/arrow_down_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <include android:id="@+id/recycler"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        layout="@layout/course_card_recycler" />

</LinearLayout>