<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/action_group"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/search_field"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:background="@drawable/custom_edit_text">

            <ImageView
                android:src="@drawable/search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp" />

            <EditText
                android:id="@+id/searchField"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/search_placeholder"
                style="@style/BodyMedium"
                android:paddingStart="16dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/filter_btn"
            android:padding="16dp"
            android:layout_marginStart="8dp"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/custom_edit_text"
            android:src="@drawable/filter_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_group">
        <TextView
            android:id="@+id/filter_choice"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_filter"
            android:textColor="@color/green" />
        <ImageView
            android:src="@drawable/arrow_down_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="328dp"
        android:layout_height="236dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/dark_gray"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_group">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/card_cover"
                android:src="@drawable/java_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="45dp"
                        android:layout_height="22dp"
                        android:backgroundTint="@color/glass"
                        android:background="@drawable/rounded_button"/>

                    <ImageView
                        android:src="@drawable/star_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="6dp"/>

                    <TextView
                        android:id="@+id/review_num"
                        style="@style/Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.9"
                        android:layout_marginStart="4dp"
                        android:layout_gravity="center"
                        android:textColor="@color/white" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <View
                    android:layout_width="87dp"
                    android:layout_height="22dp"
                    android:backgroundTint="@color/glass"
                    android:background="@drawable/rounded_button"
                    android:layout_marginStart="4dp"/>

                    <TextView
                        android:id="@+id/course_date"
                        style="@style/Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="22 May 2024"
                        android:layout_gravity="center"
                        android:textColor="@color/white" />
                </FrameLayout>

            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">
                <View
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:backgroundTint="@color/glass"
                    android:background="@drawable/rounded_button"/>

                <ImageView
                    android:src="@drawable/favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>
            </FrameLayout>

        </FrameLayout>

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/card_title"
                style="@style/TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java разработчик с нуля"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/card_descr"
                style="@style/BodySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java разработчик с нуля"
                android:textColor="@color/white"
                android:paddingTop="12dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/card_price"
                    style="@style/TitleMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="999"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/card_more"
                    style="@style/BodySmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:textColor="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation"/>

</androidx.constraintlayout.widget.ConstraintLayout>